# metaculus

./: .coderabbit.yaml  .dockerignore  .env.example.sh  .env.sample  .flake8  .gitignore  .slugignore  .~lock.spam_check_results_v6.csv#  Claude.md  Dockerfile  LICENSE  Procfile  README.md  deploy.sh  design-prompt-mobile-consumer.md  docker-compose.yaml  dump.rdb  entrypoint.sh  fly.preview.toml  lightweight-accounts-spec.md  local.env  logfile  manage.py  old_to_new_migration.py  package-lock.json  package.json  pyproject.toml  pytest-errors.txt  pytest.ini  spam_check_results.csv  start.sh  temp.json  true
.claude/: launch.json
.design-sync/: NOTES.md  config.json  gen-tokens.mjs  shot.mjs
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue.md
.github/workflows/: claude.yml  comment_of_the_week_slack_reminder.yml  deploy_dev.yml  deploy_dev_image.yml  deploy_play.yml  deploy_prod.sh  deploy_prod.yml  deploy_production.yml  deploy_screenshot.yml  deploy_screenshots.yml  deploy_staging.yml  docker_build.yml  integration_tests.yml  lint.yml  pr_preview.yml  pr_preview_cron.yml  prettier.yml  stale.yml  storybook.yml  storybook_prod.yml  test.yml  unit_tests.yml  weekly_comms_digest.yml
authentication/: admin.py  auth.py  backends.py  jwt_session.py  models.py  serializers.py  services.py  social_pipeline.py  urls.py  views.py
authentication/migrations/: 0001_add_token_model.py
authentication/services/: email_link.py  gated_actions.py
authentication/views/: common.py  email_link.py  social.py
coherence/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
coherence/migrations/: 0001_initial.py  0002_aggregatecoherencelink.py  0002_coherencelink_unique_user_question_pair.py  0003_alter_coherencelink_direction_and_more.py  0004_aggregatecoherencelinkvote.py
comments/: admin.py  apps.py  constants.py  jobs.py  models.py  serializers.py  services.py  tasks.py  translation.py  urls.py  utils.py  views.py
comments/migrations/: 0001_initial.py  0002_alter_comment_on_post.py  0002_initial.py  0002_rename_forecast_comment_included_forecast_and_more.py  0003_alter_comment_edit_history_and_more.py  0003_comment_on_project_alter_comment_on_question.py  0003_initial.py  0004_alter_comment_is_private.py  0004_commentvote_commentvote_votes_unique_user_comment.py  0004_remove_comment_on_question_comment_on_post.py  0005_comment_content_last_md5_and_more.py  0005_comment_edited_at_commentdiff_created_at_and_more.py  0005_comment_temp_translation_fields.py  0005_comment_text_new.py  0005_remove_comment_type_comment_is_private.py  0006_alter_commentvote_user.py  0006_comment_content_last_md5_and_more.py  0006_comment_edit_history.py  0006_populate_original_fields.py  0007_changedmymindentry.py  0007_comment_text_pt.py  0007_remove_comment_edited_at_alter_comment_created_at_and_more.py  0008_alter_comment_created_at_alter_comment_edit_history_and_more.py  0008_comment_root_alter_comment_parent.py  0008_keyfactor_keyfactorvote.py  0009_alter_comment_is_soft_deleted.py  0010_comment_is_pinned_and_more.py  0010_comment_text_edited_at.py  0011_comment_is_pinned_and_more.py  0012_comment_is_automatically_translated_and_more.py  0018_rename_key_factors.py  (+16 more)
communities/: urls.py  views.py
community_migration/: services.py  utils.py
docs/: openapi.yml  redocly.yml
fab_credits/: admin.py  apps.py  models.py  urls.py  views.py
fab_management/: apps.py  urls.py  utils.py  views.py
front_end/: .env.example  .eslintignore  .eslintrc.json  .fontawesome_token  .gitignore  .lintstagedrc.js  .prettierignore  .prettierrc.json  README.md  SIMPLE_CLEAN_ARCHITECTURE.md  blobal.d.ts  bunfig.toml  ecosystem.config.js  eslint.config.mjs  global.d.ts  instrumentation.ts  jest.config.ts  jest.setup.ts  next.config.mjs  package-lock.json  package.json  pm2-next.js  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.prettier.ts  tailwind.config.ts  tsconfig.json
licenses/: third_party_licenses_js.csv  third_party_licenses_python.csv
metac_ai_tournament/: apps.py  urls.py  utils_openai_forecast.py  views.py
metaculus_web/: admin.py  asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
migrator/: utils.py
misc/: admin.py  apps.py  context_processors.py  jobs.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
notifications/: constants.py  jobs.py  models.py  services.py  utils.py
posts/: admin.py  apps.py  jobs.py  models.py  serializers.py  services.py  tasks.py  translation.py  urls.py  utils.py  views.py
projects/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  translation.py  urls.py  views.py
question_links/: apps.py  urls.py  views.py
questions/: admin.py  apps.py  cache.py  compat.py  constants.py  jobs.py  managers.py  models.py  serializers.py  services.py  tasks.py  translation.py  types.py  urls.py  utils.py  views.py
scoring/: admin.py  apps.py  constants.py  fast_scoring.py  jobs.py  leaderboard_math.py  models.py  reputation.py  score_math.py  serializers.py  tasks.py  the_math.py  urls.py  utils.py  views.py
screenshot/: Dockerfile  Readme.md  app.py  deploy_to_heroku.sh  pyproject.toml  start.sh
scripts/: audit_labor_hub.py  check_migrations_since_deploy.sh  create_minimal_db.sh  deploy_to_heroku.sh  run_integration_tests.sh  wait_for_heroku_release.sh  weekly_comms_digest.py
templates/: swagger-ui.html
tests/: fixtures.py  test_questions.py
users/: admin.py  constants.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
utils/: aws.py  cache.py  call_llm.py  cloudflare.py  context_processors.py  csv_utils.py  datetime.py  db.py  debug.py  dramatiq.py  dtypes.py  email.py  enrichments.py  exceptions.py  files.py  find_related_posts.py  formatters.py  frontend.py  management.py  middlewares.py  models.py  openai.py  paginator.py  requests.py  serializers.py  serper_google.py  tasks.py  tests.py  tokens.py  translation.py  types.py  typing.py  urls.py  views.py
(+3317 files in other folders)
