[tool.poetry]
name = "metaculus-web"
version = "0.1.0"
description = ""
authors = ["George3d6 <george@cerebralab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
django = "^5.0.6"
djangorestframework = "^3.15.1"
rest-social-auth = "^8.3.0"
django-dotenv = "^1.4.2"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
python-dateutil = "^2.9.0.post0"
django-extensions = "^3.2.3"
numpy = "^1.26.4"
django-cors-headers = "^4.3.1"
django-anymail = {extras = ["mailgun"], version = "^10.3"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-django = "^4.8.0"
pytest-env = "^1.1.3"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
