[project]
name = "metaculus-web"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12.3,<3.13"
dependencies = [
    "django>=5.2.11,<6",
    "djangorestframework>=3.15.1,<4",
    "rest-social-auth>=9.0.0,<10",
    "dj-database-url>=2.1.0,<3",
    "python-dateutil>=2.9.0.post0,<3",
    "django-extensions>=3.2.3,<4",
    "numpy>=1.26.4,<2",
    "django-cors-headers>=4.3.1,<5",
    "django-anymail[mailgun]>=10.3,<11",
    "django-sql-utils>=0.7.0,<0.8",
    "django-dramatiq>=0.11.6,<0.12",
    "django-redis>=5.4.0,<6",
    "ipython>=8.25.0,<9",
    "scipy>=1.13.1,<2",
    "django-dynamic-fixture>=4.0.1,<5",
    "django-admin-autocomplete-filter>=0.7.1,<0.8",
    "html2text>=2024.2.26,<2025",
    "gunicorn>=23.0.0,<24",
    "django-storages[s3]>=1.14.3,<2",
    "pillow>=12.1.1,<13",
    "setuptools==78.1.1",
    "jinja2>=3.1.6,<4",
    "apscheduler>=3.10.4,<4",
    "openai>=1.36.0,<2",
    "pgvector>=0.3.2,<0.4",
    "tiktoken>=0.7.0,<0.8",
    "aiohttp>=3.13.3,<4",
    "django-mjml>=1.2,<2",
    "markdown>=3.6,<4",
    "sshtunnel>=0.4.0,<0.5",
    "python-dotenv>=1.0.1,<2",
    "mysql-connector-python>=9.0.0,<10",
    "gspread>=6.1.2,<7",
    "whitenoise>=6.7.0,<7",
    "sentry-sdk>=2.52.0,<3",
    "brotli>=1.2.0,<2",
    "django-better-admin-arrayfield>=1.4.2,<2",
    "django-modeltranslation>=0.19.9,<0.20",
    "google-auth>=2.35.0,<3",
    "django-select2>=8.4.1,<9",
    "instructor>=1.7.7,<2",
    "pytz>=2025.2",
    "psycopg2>=2.9.10,<3",
    "scikit-learn>=1.7.2,<2",
    "djangorestframework-simplejwt>=5.5.1,<6",
    "cryptography>=46.0.5,<47",
]

[dependency-groups]
dev = [
    "pytest>=8.2.1,<9",
    "pytest-django>=4.8.0,<5",
    "pytest-env>=1.1.3,<2",
    "factory-boy>=3.3.0,<4",
    "django-debug-toolbar>=4.4.2,<5",
    "freezegun>=1.5.1,<2",
    "pytest-mock>=3.14.0,<4",
    "playwright>=1.46.0,<2",
    "psycopg2-binary>=2.9.10,<3",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    "lambda",
    "scripts",
    "venv",
    ".venv",
    "cdk/cdk.out",
    "migrations",
    "front_end",
]

[tool.ruff.lint]
select = ["E", "F", "Q", "C90"]
ignore = ["E203", "E501", "E701", "E712", "Q003"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 56

[tool.ruff.format]
quote-style = "double"
