[project]
name = "headless-rendering"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12.3,<3.13"
dependencies = [
    "fastapi>=0.128.0,<0.129",
    "playwright>=1.33.0,<2",
    "python-decouple>=3.8,<4",
    "sentry-sdk[fastapi]>=1.22.2,<2",
    "uvicorn>=0.22.0,<1",
]
